Ustawienie połączenia z bazą danych i ręczne grzebanie w pom.xml bo się okazuję że gdy w ustawieniu ma pom a nie jar to nie chce kopiować propeties do targetu

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,10 @@
 spring.application.name=springboot-javafx
-spring.datasource.url=postgresql://postgres:Ul38mMnX6xuZrJFA@stuffily-sweeping-halfbeak.data-1.use1.tembo.io:5432/postgres
+spring.datasource.url=jdbc:postgresql://postgres:Ul38mMnX6xuZrJFA@stuffily-sweeping-halfbeak.data-1.use1.tembo.io:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Ul38mMnX6xuZrJFA
+spring.datasource.driver-class-name=org.postgresql.Driver
 
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
