Commit przed próbą zmiany struktury projektu na dwo moduły żebu UI miało dostęp do Serviców

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 spring.application.name=springboot-javafx
-spring.datasource.url=jdbc:postgresql://postgres:Ul38mMnX6xuZrJFA@stuffily-sweeping-halfbeak.data-1.use1.tembo.io:5432/postgres
+spring.datasource.url=jdbc:postgresql://stuffily-sweeping-halfbeak.data-1.use1.tembo.io:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=Ul38mMnX6xuZrJFA
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
+spring.jpa.properties.hibernate.default_schema=bird
+#
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate=DEBUG
