--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.datasource.username=postgres
 spring.datasource.password=Ul38mMnX6xuZrJFA
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.default_schema=bird
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #
 #logging.level.org.springframework=DEBUG
 #logging.level.org.hibernate=DEBUG
