--- a/core/pom.xml
+++ b/core/pom.xml
@@ -79,6 +79,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <skip>true</skip>
                 </configuration>
             </plugin>
 
